# crawling_project

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
static/js/: crawldata_list.js
stock/: crawl.py  models.py  urls.py  views.py
stock/migrations/: 0001_initial.py
templates/: base.html
templates/stock/: crawldata_list.html
