[tool.poetry]
name = "stock-crawling"
version = "0.1.0"
description = "django stock crawling"
authors = ["SwanyCastle <seunghwan712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
